[#1152] Fix play button z-index to be reasonably above everything else (#1155)
Closes #1152

## Changes:

- Adjust z-index to be reasonably higher than everything else

--- a/src/engine/Loader.css
+++ b/src/engine/Loader.css
@@ -3,6 +3,7 @@
 button#excalibur-play {
   display: inline-block;
   position: relative;
+  z-index: 999;
   border-radius: 6px;
   border: none;
   /*border: 3px solid;
